--- a/project/src/main/res/layout/fragment_tablet_tripbucket_item.xml
+++ b/project/src/main/res/layout/fragment_tablet_tripbucket_item.xml
@@ -52,10 +52,10 @@
                     android:layout_height="match_parent"
                     android:layout_marginLeft="10dp"
                     android:layout_weight="1"
-                    android:drawableLeft="@drawable/ic_book_bucket_arrow"
+                    android:drawableLeft="?attr/skin_tablet_trip_bucket_arrow"
                     android:drawablePadding="10dp"
                     android:gravity="left|center_vertical"
-                    android:textColor="#FFDB4C"
+                    android:textColor="?attr/skin_tablet_book_button_text_color"
                     android:textSize="18sp"
                     app:textStyle="medium"/>
 
