--- a/project/src/main/res/values/themes.xml
+++ b/project/src/main/res/values/themes.xml
@@ -190,6 +190,14 @@
         <item name="skin_candycaneProgressDrawable">@drawable/progressbar_candycane_horizontal</item>
         <item name="skin_sorryRoomsSoldOutErrorMessage">@string/error_hotel_is_now_sold_out_expedia</item>
         <item name="skin_errorHotelOffersHotelServiceFailureString">@string/e3_error_hotel_offers_hotel_service_failure</item>
+
+        <item name="skin_action_bar_logo_tablet">@drawable/ic_expedia_action_bar_logo_dark</item>
+        <item name="skin_tablet_book_button_text_color">@color/tablet_book_button_text_color</item>
+        <item name="skin_tablet_trip_bucket_arrow">@drawable/ic_book_bucket_arrow</item>
+        <item name="skin_collection_placeholder">@drawable/bg_itin_placeholder</item>
+        <item name="skin_tablet_hotel_room_rate_select_button">@drawable/tablet_hotel_room_select_button</item>
+        <item name="skin_tablet_addToTrip_button">@drawable/tablet_hotel_room_add_button</item>
+        <item name="skin_tabletCheckoutLoginLogoDrawable">@drawable/ic_tablet_checkout_expedia_logo</item>
     </style>
 
     <!-- Inherit EB or VSC theme based on desired project -->
