--- a/project/src/voyages/res/values/themes.xml
+++ b/project/src/voyages/res/values/themes.xml
@@ -12,7 +12,7 @@
         <item name="skin_actionBarCheckoutDrawable">@drawable/ic_action_bar_checkout_arrow_green</item>
         <item name="skin_costSummaryHeaderTextColor">@color/cost_summary_header_text_color_vsc</item>
         <item name="skin_actionBarBackgroundDrawable">@drawable/bg_action_bar_vsc</item>
-        <item name="skin_ratingBarUserReviewStyle">@style/RatingBar.UserReview.Orange</item>
+        <item name="skin_ratingBarUserReviewStyle">@style/RatingBar.UserReview.VSC.Purple</item>
         <item name="skin_calendarDatePickerCellDrawable">@drawable/calendar_date_picker_cell_vsc</item>
         <item name="skin_calendarDatePickerPopupDrawable">@drawable/calendar_date_picker_popup_orange</item>
         <item name="skin_calendarDatePickerDateFormat">@string/calendar_date_picker_date_format_vsc</item>
@@ -20,7 +20,7 @@
         <item name="skin_hotelListingSaleDrawable">@drawable/bg_hotel_cell_sale_vsc</item>
         <item name="skin_hotelDetailSaleRibbonDrawable">@drawable/bg_sale_ribbon_vsc</item>
         <item name="skin_roomsRatesSaleRibbonDrawable">@drawable/rooms_rates_ribbon_vsc</item>
-        <item name="skin_hotelListingUserRatingStyle">@style/RatingBar.UserReview.Orange</item>
+        <item name="skin_hotelListingUserRatingStyle">@style/RatingBar.UserReview.VSC.Purple</item>
         <item name="skin_hotelListingSortPriceDrawable">@drawable/ic_sort_euro</item>
         <item name="skin_hotelListingFilterPriceCheapString">@string/filter_price_cheap</item>
         <item name="skin_hotelListingFilterPriceModerateString">@string/filter_price_moderate</item>
@@ -52,7 +52,7 @@
         <item name="skin_aboutAppLogoDrawable">@drawable/ic_voyages_sncf</item>
         <item name="skin_aboutWebsiteString">@string/vsc_website</item>
         <item name="skin_emailUserNameString">@string/email_user_name_vsc</item>
-        <item name="skin_userRatingBarDrawable">@drawable/ratingbar_userreview_orange</item>
+        <item name="skin_userRatingBarDrawable">@drawable/ratingbar_userreview_vsc_purple_flat</item>
         <item name="skin_errorHotelOffersHotelServiceFailureString">@string/e3_error_hotel_offers_hotel_service_failure_vsc</item>
         <item name="skin_loginWithExpediaContentDescription">@string/cd_checkout_log_in_with_vsc</item>
         <item name="skin_costSummaryBookingFeesString">@string/vsc_booking_fee</item>
