--- a/project/src/voyages/res/values/themes.xml
+++ b/project/src/voyages/res/values/themes.xml
@@ -2,7 +2,7 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
 
     <style name="Theme.VSC" parent="@style/Theme.Expedia">
-        <item name="android:logo" tools:targetApi="11">@drawable/ic_logo_vsc</item>
+        <item name="android:logo" tools:targetApi="11">@drawable/ic_logo_hotels</item>
         <item name="skin_hotelPriceStandardColor">@color/hotel_price_text_color_vsc</item>
         <item name="skin_hotelPriceSaleColor">@color/hotel_price_sale_text_color_vsc</item>
         <item name="skin_hotelSearchActionBarPadding">5dp</item>
@@ -43,7 +43,7 @@
         <item name="skin_hotelPrimaryTravelerInfoLogoDrawable">@drawable/ic_vsc_white_logo_small</item>
         <item name="skin_hotelListMapMarkerSaleDrawable">@drawable/map_pin_sale_vsc</item>
         <item name="skin_hotelImagePlaceHolderDrawable">@drawable/ic_image_placeholder_vsc</item>
-        <item name="skin_hotelWebViewActionBarLogo">@drawable/ic_logo_vsc</item>
+        <item name="skin_hotelWebViewActionBarLogo">@drawable/ic_logo_hotels</item>
 		<item name="skin_cvvEntryTitleText">@string/cvv_explanation_vsc</item>
         <item name="skin_aboutAppSupportString">@string/app_support</item>
         <item name="skin_aboutCopyrightString">@string/VSC_copyright</item>
@@ -81,6 +81,7 @@
         <item name="skin_calendarFlightDescItinerary">@string/calendar_flight_desc_itinerary_TEMPLATE_vsc</item>
         <item name="skin_calendarFlightDescSupport">@string/calendar_flight_desc_support_TEMPLATE_vsc</item>
         <item name="skin_sorryRoomsSoldOutErrorMessage">@string/error_hotel_is_now_sold_out_vsc</item>
+        <item name="skin_flightLoginActionBarIcon">@drawable/ic_logo_flights</item>
     </style>
 
     <!-- Inherit EB or VSC theme based on desired project -->
@@ -96,7 +97,7 @@
         <item name="rowBackground">@android:color/white</item>
         <item name="rowHeaderBackground">@android:color/white</item>
         <item name="android:dropDownListViewStyle">@style/DropDownListView</item>
-        <item name="android:logo">@drawable/ic_logo_vsc</item>
+        <item name="android:logo">@drawable/ic_logo_flights</item>
         <item name="android:actionBarStyle">@style/FlightActionBarVSC</item>
         <item name="android:actionMenuTextColor">@color/action_bar_flight_text_color</item>
         <item name="android:actionModeCloseDrawable" >@drawable/btn_navigation_cancel</item>
