--- a/project/src/main/res/layout/fragment_tablet_checkout_forms.xml
+++ b/project/src/main/res/layout/fragment_tablet_checkout_forms.xml
@@ -15,7 +15,8 @@
             android:layout_height="match_parent"
             android:layout_weight="@integer/tablet_checkout_forms_left_margin_weight" />
 
-        <ScrollView
+        <com.expedia.bookings.widget.TabletCheckoutScrollView
+            android:id="@+id/checkout_scroll"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="2">
@@ -52,7 +53,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp" />
             </LinearLayout>
-        </ScrollView>
+        </com.expedia.bookings.widget.TabletCheckoutScrollView>
     </LinearLayout>
 
     <!-- Overlay for editing of a single checkout form: travelers, payment -->
