3496. Stored Travelers List Popup in checkout overview. Part3
Creating a new custom view CheckoutInfoStatusImageView, to deal with showing the complete/incomplete checkout status for travelers.
Adding listeners for when a traveler is chosen in the picker and refreshing the CheckoutState.
Adding pressed state drawable for checkout Error State.

--- a/project/src/main/res/layout-sw600dp/section_hotel_display_traveler_info_btn.xml
+++ b/project/src/main/res/layout-sw600dp/section_hotel_display_traveler_info_btn.xml
@@ -8,7 +8,7 @@
     android:orientation="horizontal"
     android:addStatesFromChildren="false" >
 
-    <ImageView
+    <com.expedia.bookings.widget.CheckoutInfoStatusImageView
         android:id="@+id/display_picture"
         android:layout_width="@dimen/checkout_data_button_icon_size"
         android:layout_height="@dimen/checkout_data_button_icon_size"
