--- a/project/src/main/res/layout-sw600dp/section_flight_display_traveler_info_btn.xml
+++ b/project/src/main/res/layout-sw600dp/section_flight_display_traveler_info_btn.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.expedia.bookings.section.SectionTravelerInfo xmlns:android="http://schemas.android.com/apk/res/android"
+<com.expedia.bookings.section.SectionTravelerInfo
+    xmlns:android="http://schemas.android.com/apk/res/android"
+
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
@@ -8,14 +10,14 @@
     android:orientation="horizontal"
     android:addStatesFromChildren="false" >
 
-    <ImageView
+    <com.expedia.bookings.widget.CheckoutInfoStatusImageView
         android:id="@+id/display_picture"
         android:layout_width="@dimen/checkout_data_button_icon_size"
         android:layout_height="@dimen/checkout_data_button_icon_size"
         android:layout_marginLeft="4dp"
         android:layout_marginRight="@dimen/checkout_info_container_padding"
         android:layout_weight="0"
-        android:src="@drawable/ic_tablet_checkout_generic_traveler" />
+        android:src="@drawable/ic_checkout_traveler_info_status" />
 
     <LinearLayout
         android:layout_width="wrap_content"
