--- a/project/src/main/res/layout-sw600dp/travelers_popup_header_footer_row.xml
+++ b/project/src/main/res/layout-sw600dp/travelers_popup_header_footer_row.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="48dp"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:background="#EBEBEB">
 
     <ImageView
         android:id="@+id/icon"
