--- a/project/src/voyages/res/values/themes.xml
+++ b/project/src/voyages/res/values/themes.xml
@@ -82,6 +82,7 @@
         <item name="skin_calendarFlightDescSupport">@string/calendar_flight_desc_support_TEMPLATE_vsc</item>
         <item name="skin_sorryRoomsSoldOutErrorMessage">@string/error_hotel_is_now_sold_out_vsc</item>
         <item name="skin_flightLoginActionBarIcon">@drawable/ic_logo_flights</item>
+        <item name="skin_flightsCostSummaryDialogStripeDrawable">@drawable/rainbow_bar</item>
     </style>
 
     <!-- Inherit EB or VSC theme based on desired project -->
@@ -134,7 +135,7 @@
         <item name="skin_itinActivityPlaceholderDrawable">@drawable/itin_header_placeholder_activities</item>
         <item name="skin_itinCarPlaceholderDrawable">@drawable/default_flights_background</item>
         <item name="skin_itinCruisePlaceholderDrawable">@drawable/itin_header_placeholder_cruises</item>
-        <item name="skin_itinHotelPlaceholderDrawable">@drawable/bg_itin_placeholder</item>
+        <item name="skin_itinHotelPlaceholderDrawable">@drawable/placeholder_lg_vsc</item>
         <item name="skin_itinFlightPlaceholderDrawable">@drawable/bg_itin_placeholder_flight</item>
         <item name="skin_itinDefaultPlaceholderDrawable">@drawable/bg_itin_fallback_activity</item>
         <item name="skin_itinCardTitleBackground">@drawable/bg_itin_card_title</item>
