Adding train-app cross sell for VSC on flight confirmation screen

--- a/project/src/main/res/layout/include_confirmation_actions_flights.xml
+++ b/project/src/main/res/layout/include_confirmation_actions_flights.xml
@@ -57,6 +57,15 @@
         android:text="@string/add_to_calendar" />
 
     <View
+        android:id="@+id/vsc_app_divider"
+        style="@style/Confirmation.Divider.Action.Flight"
+        android:visibility="gone" />
+
+    <include
+        layout="@layout/vsc_train_confirmation_row"
+        android:visibility="gone" />
+
+    <View
         android:id="@+id/flighttrack_divider"
         style="@style/Confirmation.Divider.Action.Flight" />
 
