--- a/project/src/main/res/layout/fragment_hotel_filters.xml
+++ b/project/src/main/res/layout/fragment_hotel_filters.xml
@@ -4,13 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/tablet_white_pane_bg"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
     <RelativeLayout
         android:id="@+id/sticky_header_container"
         android:layout_width="match_parent"
         android:layout_height="64dp"
-        android:gravity="center_vertical" >
+        android:gravity="center_vertical">
 
         <com.expedia.bookings.widget.TextView
             android:id="@+id/sort_and_filter"
@@ -40,13 +40,13 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1" >
+        android:layout_weight="1">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="16dp" >
+            android:padding="16dp">
 
             <com.expedia.bookings.widget.CustomEditText
                 android:id="@+id/filter_hotel_name_edit_text"
@@ -72,44 +72,13 @@
                 android:textAllCaps="true"
                 android:textColor="#7C7E7F" />
 
-            <com.expedia.bookings.widget.SlidingRadioGroup
-                android:id="@+id/sort_by_button_group"
-                style="?attr/skin_hotelListingFilterGroupStyle"
+            <Spinner
+                android:id="@+id/sort_by_selection_spinner"
                 android:layout_width="fill_parent"
-                android:layout_height="@dimen/sliding_filter_row_height"
-                android:layout_marginBottom="8dp" >
-
-                <RadioButton
-                    android:id="@+id/sort_by_price_button"
-                    style="@style/V2.Widget.RadioButton.Filter"
-                    android:contentDescription="@string/cd_sort_by_price"
-                    android:text="@string/price" />
-
-                <RadioButton
-                    android:id="@+id/sort_by_rating_button"
-                    style="@style/V2.Widget.RadioButton.Filter"
-                    android:contentDescription="@string/cd_sort_by_rating"
-                    android:text="@string/rating" />
-
-                <RadioButton
-                    android:id="@+id/sort_by_distance_button"
-                    style="@style/V2.Widget.RadioButton.Filter"
-                    android:contentDescription="@string/cd_sort_by_distance"
-                    android:text="@string/distance" />
-
-                <RadioButton
-                    android:id="@+id/sort_by_popular_button"
-                    style="@style/V2.Widget.RadioButton.Filter"
-                    android:contentDescription="@string/cd_sort_by_popular"
-                    android:text="@string/popular" />
-
-                <RadioButton
-                    android:id="@+id/sort_by_deals_button"
-                    style="@style/V2.Widget.RadioButton.Filter"
-                    android:contentDescription="@string/cd_sort_hotels_by_deals"
-                    android:text="@string/discounts" />
-
-            </com.expedia.bookings.widget.SlidingRadioGroup>
+                android:dropDownWidth="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/spinner_sort"
+                android:layout_marginBottom="8dp"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -125,7 +94,7 @@
                 style="?attr/skin_hotelListingFilterGroupStyle"
                 android:layout_width="fill_parent"
                 android:layout_height="@dimen/sliding_filter_row_height"
-                android:layout_marginBottom="12dp" >
+                android:layout_marginBottom="12dp">
 
                 <RadioButton
                     android:id="@+id/price_cheap_button"
@@ -158,7 +127,7 @@
                 style="?attr/skin_hotelListingFilterGroupStyle"
                 android:layout_width="fill_parent"
                 android:layout_height="@dimen/sliding_filter_row_height"
-                android:layout_marginBottom="12dp" >
+                android:layout_marginBottom="12dp">
 
                 <RadioButton
                     android:id="@+id/radius_small_button"
@@ -188,7 +157,7 @@
                 style="?attr/skin_hotelListingFilterGroupStyle"
                 android:layout_width="fill_parent"
                 android:layout_height="@dimen/sliding_filter_row_height"
-                android:layout_marginBottom="12dp" >
+                android:layout_marginBottom="12dp">
 
                 <com.expedia.bookings.widget.ImageRadioButton
                     android:id="@+id/rating_low_button"
@@ -224,7 +193,7 @@
                 android:layout_marginBottom="6dp"
                 android:layout_marginTop="15dp"
                 android:orientation="horizontal"
-                android:visibility="gone" >
+                android:visibility="gone">
 
                 <TextView
                     android:id="@+id/filter_vip_access_label"
