--- a/project/src/main/res/values/arrays.xml
+++ b/project/src/main/res/values/arrays.xml
@@ -806,4 +806,11 @@
         <item>Trunk (Stubbed)</item>
         <item>Custom Server</item>
     </string-array>
+
+    <string-array name="sort_options">
+        <item>@string/popular</item>
+        <item>@string/price</item>
+        <item>@string/discounts</item>
+        <item>@string/rating</item>
+    </string-array>
 </resources>
