Travelocity tablet changes.
Changed hotel details star rating color.
Changed trip bucket background and text color in portrait mode.
Also moved tablet related skin* elements to Theme.Expedia.Tablet

--- a/project/src/expedia/res/values-sw600dp/tablet_themes.xml
+++ b/project/src/expedia/res/values-sw600dp/tablet_themes.xml
@@ -11,6 +11,16 @@
         <item name="skin_hotelDetailsUserRatingStyle">@style/RatingBar.UserReview.HotelDetails</item>
         <item name="skin_hotelDetailsStarRatingStyle">@style/RatingBar.Star.HotelDetails</item>
         <item name="android:checkboxStyle">@style/Widget.CompoundButton.CheckBox</item>
+
+        <item name="skin_action_bar_logo_tablet">@drawable/ic_expedia_action_bar_logo_dark</item>
+        <item name="skin_tablet_book_button_text_color">@color/tablet_book_button_text_color</item>
+        <item name="skin_tablet_trip_bucket_arrow">@drawable/ic_book_bucket_arrow</item>
+        <item name="skin_collection_placeholder">@drawable/bg_itin_placeholder</item>
+        <item name="skin_tablet_hotel_room_rate_select_button">@drawable/tablet_hotel_room_select_button</item>
+        <item name="skin_tablet_addToTrip_button">@drawable/tablet_hotel_room_add_button</item>
+        <item name="skin_tabletCheckoutLoginLogoDrawable">@drawable/ic_tablet_checkout_expedia_logo</item>
+        <item name="skin_tablet_bucket_item_counter">@drawable/bg_tablet_portrait_trip_bucket_item_counter</item>
+        <item name="skin_tablet_bucket_text_color">@color/tablet_trip_bucket_text_color</item>
     </style>
 
     <style name="V2.Theme" parent="Theme.Expedia.Tablet" />
