--- a/project/src/expedia/res/layout/fragment_phone_launch.xml
+++ b/project/src/expedia/res/layout/fragment_phone_launch.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
@@ -11,7 +12,6 @@
         android:layout_height="?android:attr/actionBarSize" />
 
     <include
-        android:layout_width="match_parent"
         layout="@layout/snippet_launch_header" />
 
     <LinearLayout
@@ -40,52 +40,128 @@
             android:textSize="17dp" />
     </LinearLayout>
 
-    <!--
-    Note: It seems as though the ordering of these views within this RelativeLayout matters in order for the Welcome
-    label to be below the ListViews and the shadow to be on top of the ListViews
-    -->
-
-    <RelativeLayout
-        android:id="@+id/scroll_container"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:splitMotionEvents="false" >
+        android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/background_view"
+        <RelativeLayout
+            android:id="@+id/scroll_container"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="centerCrop" />
-
-        <View
-            android:id="@+id/divider"
-            android:layout_width="@dimen/launch_tile_space_width"
-            android:layout_height="match_parent"
-            android:layout_centerHorizontal="true"
-            android:background="@android:color/black" />
-
-        <com.expedia.bookings.widget.LaunchStreamListView
-            android:id="@+id/hotels_stream_list_view"
-            style="@style/ExpediaLaunchList"
-            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_toLeftOf="@id/divider" />
+            android:splitMotionEvents="false" >
 
-        <com.expedia.bookings.widget.LaunchStreamListView
-            android:id="@+id/flights_stream_list_view"
-            style="@style/ExpediaLaunchList"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_toRightOf="@id/divider" />
+            <ImageView
+                android:id="@+id/background_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop" />
 
-        <View
-            android:id="@+id/content_shadow"
+            <View
+                android:id="@+id/divider"
+                android:layout_width="@dimen/launch_tile_space_width"
+                android:layout_height="match_parent"
+                android:layout_centerHorizontal="true"
+                android:background="@android:color/black" />
+
+            <com.expedia.bookings.widget.LaunchStreamListView
+                android:id="@+id/hotels_stream_list_view"
+                style="@style/ExpediaLaunchList"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_toLeftOf="@id/divider" />
+
+            <com.expedia.bookings.widget.LaunchStreamListView
+                android:id="@+id/flights_stream_list_view"
+                style="@style/ExpediaLaunchList"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_toRightOf="@id/divider" />
+
+            <View
+                android:id="@+id/content_shadow"
+                android:layout_width="match_parent"
+                android:layout_height="4dp"
+                android:layout_alignParentTop="true"
+                android:background="@drawable/launch_content_top_shadow" />
+        </RelativeLayout>
+
+        <LinearLayout
+            android:id="@+id/air_attach_banner_container"
             android:layout_width="match_parent"
-            android:layout_height="4dp"
-            android:layout_alignParentTop="true"
-            android:background="@drawable/launch_content_top_shadow" />
-    </RelativeLayout>
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:orientation="horizontal"
+            android:background="@drawable/bg_air_attach_phone_launch_banner"
+            android:visibility="gone">
+
+            <LinearLayout
+                android:id="@+id/air_attach_plane_container"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <FrameLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:background="#fd8126">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:paddingLeft="16dp"
+                        android:paddingRight="16dp"
+                        android:src="@drawable/itin_plane" />
+
+                </FrameLayout>
+
+                <com.larvalabs.svgandroid.widget.SVGView
+                    android:id="@+id/air_attach_curve"
+                    android:layout_width="8dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="-8dp"
+                    app:src="@raw/curve" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:layout_gravity="center_vertical"
+                android:padding="12dp">
+
+                <TextView
+                    android:id="@+id/itin_air_attach_text_view"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#FFFFFF"
+                    android:textStyle="bold"
+                    android:text="@string/air_attach_alert"/>
+
+                <TextView
+                    android:id="@+id/itin_air_attach_savings_text_view"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#FFFFFF"
+                    android:text="@string/air_attach_potential_savings"/>
+
+            </LinearLayout>
+
+            <ImageView
+                android:id="@+id/air_attach_banner_close"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:padding="22dp"
+                android:src="@drawable/btn_local_expert_close"
+                android:background="?android:selectableItemBackground"/>
+
+        </LinearLayout>
+
+    </FrameLayout>
 
 </LinearLayout>
