--- a/project/src/main/res/values-sw600dp/styles.xml
+++ b/project/src/main/res/values-sw600dp/styles.xml
@@ -60,6 +60,12 @@
         <item name="android:maxHeight">13dp</item>
     </style>
 
+    <style name="RatingBar.Circle.HotelDetails">
+        <item name="android:progressDrawable">@drawable/ratingbar_circle_hotel_details_small</item>
+        <item name="android:minHeight">13dp</item>
+        <item name="android:maxHeight">13dp</item>
+    </style>
+
     <style name="RatingBar.UserReview.HotelDetails">
         <item name="android:progressDrawable">@drawable/ratingbar_userreview_hotel_details_small</item>
         <item name="android:minHeight">17dp</item>
