--- a/project/src/expedia/res/values-sw600dp/tablet_themes.xml
+++ b/project/src/expedia/res/values-sw600dp/tablet_themes.xml
@@ -9,7 +9,6 @@
         <item name="skin_HotelRowThumbPlaceHolderDrawable">@drawable/bg_tablet_hotel_results_placeholder</item>
         <item name="skin_hotelImagePlaceHolderDrawable">@drawable/placeholder_lg</item>
         <item name="skin_hotelDetailsUserRatingStyle">@style/RatingBar.UserReview.HotelDetails</item>
-        <item name="skin_hotelDetailsStarRatingStyle">@style/RatingBar.Star.HotelDetails</item>
         <item name="android:checkboxStyle">@style/Widget.CompoundButton.CheckBox</item>
 
         <item name="skin_action_bar_logo_tablet">@drawable/ic_expedia_action_bar_logo_dark</item>
@@ -20,6 +19,9 @@
         <item name="skin_tablet_addToTrip_button">@drawable/tablet_hotel_room_add_button</item>
         <item name="skin_tablet_bucket_item_counter">@drawable/bg_tablet_portrait_trip_bucket_item_counter</item>
         <item name="skin_tablet_bucket_text_color">@color/tablet_trip_bucket_text_color</item>
+
+        <item name="skin_tabletHotelDetailsStarRatingStyle">@style/RatingBar.Star.HotelDetails</item>
+        <item name="skin_tabletHotelDetailsCircleRatingStyle">@style/RatingBar.Circle.HotelDetails</item>
     </style>
 
     <style name="V2.Theme" parent="Theme.Expedia.Tablet" />
