3580 phone launch air attach banner ui polish

--- a/project/src/expedia/res/layout/fragment_phone_launch.xml
+++ b/project/src/expedia/res/layout/fragment_phone_launch.xml
@@ -158,7 +158,7 @@
                 android:layout_gravity="center"
                 android:padding="22dp"
                 android:src="@drawable/btn_local_expert_close"
-                android:background="?android:selectableItemBackground"/>
+                android:background="@drawable/bg_air_attach_phone_launch_close"/>
 
         </LinearLayout>
 
