--- a/project/src/main/res/values/colors.xml
+++ b/project/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="launch_band">#36ffffff</color>
     <color name="launch_tile_overlay">#A6000000</color>
     <color name="low_memory_bg_color">#404040</color>
+    <color name="bg_air_attach_phone_launch">#1e2022</color>
 
     <!-- Itinerary colors -->
     <color name="itin_white_text">#F3F3F3</color>
