--- a/project/src/voyages/res/values/themes.xml
+++ b/project/src/voyages/res/values/themes.xml
@@ -46,7 +46,7 @@
         <item name="skin_hotelWebViewActionBarLogo">@drawable/ic_logo_hotels</item>
 		<item name="skin_cvvEntryTitleText">@string/cvv_explanation_vsc</item>
         <item name="skin_aboutAppSupportString">@string/app_support</item>
-        <item name="skin_aboutCopyrightString">@string/VSC_copyright</item>
+        <item name="skin_aboutCopyrightString">@string/VSC_copyright_TEMPLATE</item>
         <item name="skin_aboutInfoUrlString">@string/app_vsc_info_url</item>
         <item name="skin_aboutAppNameString">@string/vsc_full_app_name</item>
         <item name="skin_aboutAppLogoDrawable">@drawable/ic_voyages_sncf</item>
