3644/3645 air attach itin card dismiss functionality
just like hiding of hotel attach.

--- a/project/src/main/res/values/donottranslate.xml
+++ b/project/src/main/res/values/donottranslate.xml
@@ -97,6 +97,7 @@
     <!-- Setting keys -->
     <string name="setting_hide_hotel_attach">setting_hide_hotel_attach</string>
     <string name="setting_hide_local_expert">setting_hide_local_expert</string>
+    <string name="setting_hide_air_attach">setting_hide_air_attach</string>
 
     <!-- Default values for preference keys -->
     <string name="preference_fake_price_change_default">0</string>
