3644/2645 better air attach itin card touch handling

--- a/project/src/main/res/layout/include_air_attach_button.xml
+++ b/project/src/main/res/layout/include_air_attach_button.xml
@@ -11,7 +11,7 @@
     <LinearLayout
         android:id="@+id/itin_button_layout"
         android:layout_width="match_parent"
-        android:layout_height="135dp"
+        android:layout_height="wrap_content"
         android:background="?attr/skin_itinHotelAttachButtonDrawable"
         android:orientation="vertical">
 
