--- a/project/src/main/res/values/whitelabels.xml
+++ b/project/src/main/res/values/whitelabels.xml
@@ -267,5 +267,7 @@
 
     <attr name="skin_tabletHotelDetailsStarRatingStyle" format="reference" />
     <attr name="skin_tabletHotelDetailsCircleRatingStyle" format="reference" />
+    <!-- Flight Map -->
+    <attr name="skin_tablet_flight_map_arrival_pin" format="reference" />
 
 </resources>
