--- a/project/src/main/res/layout/fragment_tablet_results_search.xml
+++ b/project/src/main/res/layout/fragment_tablet_results_search.xml
@@ -138,14 +138,14 @@
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
                 android:drawablePadding="8dp"
-                android:drawableLeft="@drawable/ic_tablet_search_results_popup_done_check"
+                android:drawableLeft="?attr/skin_skin_tablet_dates_popup_done_drawable"
                 android:paddingLeft="16dp"
                 android:paddingTop="22dp"
                 android:paddingRight="24dp"
                 android:paddingBottom="34dp"
                 android:text="@string/done"
                 android:textAllCaps="true"
-                android:textColor="@color/tablet_results_search_blue"
+                android:textColor="?attr/skin_tablet_dates_popup_done_color"
                 android:textSize="14dp"
                 app:textStyle="bold"
                 android:background="@drawable/bg_tablet_search_results_popup_done_btn" />
