--- a/project/src/main/res/values/whitelabels.xml
+++ b/project/src/main/res/values/whitelabels.xml
@@ -263,6 +263,10 @@
     <attr name="skin_tablet_bucket_text_color" format="reference|color" />
     <attr name="skin_tablet_hotel_details_star_drawable" format="reference" />
     <attr name="skin_tablet_hotel_details_star_small_drawable" format="reference" />
+    <attr name="skin_tablet_search_result_error_button_drawable" format="reference" />
+    <attr name="skin_tablet_search_result_error_button_text_color" format="color|reference" />
+    <attr name="skin_tablet_dates_popup_done_color" format="color|reference" />
+    <attr name="skin_skin_tablet_dates_popup_done_drawable" format="reference" />
 
     <!-- Flight Map -->
     <attr name="skin_tablet_flight_map_arrival_pin" format="reference" />
