--- a/project/src/expedia/res/values-sw600dp/tablet_themes.xml
+++ b/project/src/expedia/res/values-sw600dp/tablet_themes.xml
@@ -24,6 +24,11 @@
         <item name="skin_tabletHotelDetailsCircleRatingStyle">@style/RatingBar.Circle.HotelDetails</item>
         <!-- Flight Map -->
         <item name="skin_tablet_flight_map_arrival_pin">@drawable/tablet_flight_map_arrival</item>
+
+        <item name="skin_tablet_search_result_error_button_drawable">@drawable/bg_tablet_search_result_error_action_button</item>
+        <item name="skin_tablet_search_result_error_button_text_color">@android:color/white</item>
+        <item name="skin_tablet_dates_popup_done_color">@color/tablet_results_search_blue</item>
+        <item name="skin_skin_tablet_dates_popup_done_drawable">@drawable/ic_tablet_search_results_popup_done_check</item>
     </style>
 
     <style name="V2.Theme" parent="Theme.Expedia.Tablet" />
