--- a/project/src/travelocity/res/values-sw600dp/tablet_themes.xml
+++ b/project/src/travelocity/res/values-sw600dp/tablet_themes.xml
@@ -26,6 +26,12 @@
         <item name="skin_tabletHotelDetailsCircleRatingStyle">@style/RatingBar.Star.HotelDetails.Travelocity</item>
         <!-- Flight Map -->
         <item name="skin_tablet_flight_map_arrival_pin">@drawable/tablet_flight_map_arrival_tvly</item>
+
+        <item name="skin_tablet_search_result_error_button_drawable">@drawable/bg_tablet_search_result_error_action_button_tvly</item>
+        <item name="skin_tablet_search_result_error_button_text_color">@color/tablet_search_error_text_color_tvly</item>
+        <item name="skin_tablet_dates_popup_done_color">@color/tablet_results_search_blue_tvly</item>
+        <item name="android:homeAsUpIndicator" >@drawable/ic_action_bar_back_arrow_white_tvly</item>
+        <item name="skin_skin_tablet_dates_popup_done_drawable">@drawable/ic_tablet_search_results_popup_done_check_tvly</item>
     </style>
 
     <style name="V2.Theme" parent="Theme.Travelocity.Tablet" />
