--- a/project/src/voyages/res/values/themes.xml
+++ b/project/src/voyages/res/values/themes.xml
@@ -66,6 +66,8 @@
         <item name="skin_infoContactEmailSubjectString">@string/contact_vsc_email_subject</item>
         <item name="skin_singleFlightNotAvailableError">@string/error_flight_no_longer_available_vsc</item>
         <item name="skin_flightsNotAvailableError">@string/error_flights_no_longer_available_vsc</item>
+        <item name="skin_cvvDivDrawable">@drawable/div_cvv_vsc</item>
+        <item name="skin_cvvDivErrorDrawable">@drawable/div_cvv_error_vsc</item>
         <item name="skin_clearPrivateDataMsg">@string/dialog_message_logged_out_and_cleared_private_data_vsc</item>
         <item name="skin_hotelSearchResultNotAvailale">@string/not_currently_available_vsc</item>
         <item name="skin_hotelSearchResultSoldOut">@string/sold_out_on_vsc</item>
