User review squares were getting cut off. Adding correct assets.
Renaming style to be generic.

--- a/project/src/main/res/values/styles.xml
+++ b/project/src/main/res/values/styles.xml
@@ -1037,7 +1037,7 @@
         <item name="android:maxHeight">10dp</item>
     </style>
 
-    <style name="V2.Widget.RatingBar.UserReview.Yellow">
+    <style name="V2.Widget.RatingBar.UserReview.Square">
         <item name="android:progressDrawable">?attr/skin_userRatingBarDrawable</item>
     </style>
 
