3740: Remove air attach itin full-button pressed state

--- a/project/src/main/res/values/whitelabels.xml
+++ b/project/src/main/res/values/whitelabels.xml
@@ -181,6 +181,7 @@
     <attr name="skin_companyLogoForReceipt" format="reference"/>
 
     <attr name="skin_itinHotelAttachButtonDrawable" format="reference"/>
+    <attr name="skin_itinAirAttachButtonDrawable" format="reference"/>
     <attr name="skin_itinDismissListSelectorDrawable" format="reference"/>
 
     <attr name="skin_itinTabletCardPopupBackgroundDrawable" format="reference"/>
