--- a/project/src/main/res/values/themes.xml
+++ b/project/src/main/res/values/themes.xml
@@ -76,6 +76,7 @@
         <item name="android:logo">@drawable/ic_logo_hotels</item>
         <item name="skin_actionBarSpinnerBackground">@drawable/ic_ab_arrow</item>
         <item name="skin_itinHotelAttachButtonDrawable">@drawable/btn_hotel_attach</item>
+        <item name="skin_itinAirAttachButtonDrawable">@drawable/btn_hotel_attach_normal</item>
 
         <!-- Custom attrs for Expedia/VSC switching -->
         <item name="skin_hotelPriceStandardColor">@color/hotel_price_text_color</item>
@@ -247,6 +248,7 @@
         <item name="skin_itinCardBackground">@drawable/bg_itin_card</item>
         <item name="skin_itinFlightsTripLineColor">@color/itin_flight_line_color</item>
         <item name="skin_itinHotelAttachButtonDrawable">@drawable/btn_hotel_attach</item>
+        <item name="skin_itinAirAttachButtonDrawable">@drawable/btn_hotel_attach_normal</item>
         <item name="skin_itinDismissListSelectorDrawable">?android:attr/selectableItemBackground</item>
         <item name="skin_candycaneProgressDrawable">@drawable/progressbar_candycane_horizontal</item>
         <item name="skin_icTypeCircleFlight">@drawable/ic_type_circle_flight</item>
@@ -272,6 +274,7 @@
         <item name="skin_itinCardBackground">@drawable/bg_itin_card</item>
         <item name="skin_itinFlightsTripLineColor">@color/itin_flight_line_color</item>
         <item name="skin_itinHotelAttachButtonDrawable">@drawable/btn_hotel_attach</item>
+        <item name="skin_itinAirAttachButtonDrawable">@drawable/btn_hotel_attach_normal</item>
         <item name="skin_itinDismissListSelectorDrawable">?android:attr/selectableItemBackground</item>
         <item name="skin_itinTabletCardPopupBackgroundDrawable">@drawable/bg_itinerary_card_popup</item>
         <item name="skin_itinTabletCardPopupHeaderDrawable">@drawable/bg_itinerary_card_popup_header</item>
