TVLY: Include App Ad in Share Itin Email for Cars & Activities

--- a/project/src/main/res/values/ids.xml
+++ b/project/src/main/res/values/ids.xml
@@ -65,6 +65,7 @@
     <item name="app_support_url_vsc" type="string"/>
     <!-- adding vsc crossSell text and link to avoid errors in Expedia app compilation -->
     <item name="share_template_long_ad_vsc" type="string"/>
+    <item name="share_template_long_ad_tvly" type="string"/>
     <!-- Adding VSC Notification icon to avoid errors in Expedia app compilation -->
     <item name="ic_stat_vsc" type="drawable"/>
 
