--- a/project/src/main/res/xml/preferences_dev.xml
+++ b/project/src/main/res/xml/preferences_dev.xml
@@ -56,6 +56,12 @@
             android:summary="Needs app restart to take effect. Then you can use hierarchy viewing on a non-root device."
             android:title="Start the hierarchy server on app launch" />
 
+        <CheckBoxPreference
+            android:defaultValue="false"
+            android:key="@string/preference_enable_picasso_logging"
+            android:summary="Show detailed logging of Picasso activity."
+            android:title="Enable Picasso Logging" />
+
     </PreferenceCategory>
 
     <PreferenceCategory android:title="Hotels" >
