lint: Enable Correctness checks

--- a/project/src/main/res/layout-land/activity_itinerary.xml
+++ b/project/src/main/res/layout-land/activity_itinerary.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:map="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal" >
@@ -11,12 +11,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:tag="@string/tag_itinerary_map"
-        map:uiCompass="false"
-        map:uiRotateGestures="false"
-        map:uiScrollGestures="false"
-        map:uiTiltGestures="false"
-        map:uiZoomControls="false"
-        map:uiZoomGestures="false" />
+        app:uiCompass="false"
+        app:uiRotateGestures="false"
+        app:uiScrollGestures="false"
+        app:uiTiltGestures="false"
+        app:uiZoomControls="false"
+        app:uiZoomGestures="false" />
 
     <ImageView
         android:id="@+id/fallback_pattern"
