--- a/project/src/main/res/values/whitelabels.xml
+++ b/project/src/main/res/values/whitelabels.xml
@@ -270,5 +270,5 @@
 
     <!-- Flight Map -->
     <attr name="skin_tablet_flight_map_arrival_pin" format="reference" />
-
+    <attr name="skin_tablet_hotel_details_background_drawable" format="reference" />
 </resources>
